--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "@react-navigation/material-top-tabs": "^6.3.0",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/stack": "^6.2.0",
-    "@sentry/react-native": "5.0.0-alpha.7",
+    "@sentry/react-native": "^5.24.1",
     "babel-plugin-import-graphql": "^2.8.1",
     "emoji-datasource-apple": "^15.0.1",
     "emoji-mart": "^5.5.2",
